# dbv

./: Cargo.toml  README.md
docker/: compose.yml
src/: app.rs  config.rs  lib.rs  log.rs  main.rs  preferences.rs  utils.rs
src/application/: app.rs  mod.rs  preferences.rs  store.rs  user_data.rs
src/components/: command.rs  connection_list.rs  database_list.rs  help_text.rs  help_view.rs  input_popup.rs  layout.rs  log_view.rs  mod.rs  records_view.rs  result_view.rs  tab.rs  table_list.rs
src/components/widgets/: custom_table.rs  fps_counter.rs  mod.rs
src/events/: events.rs  key.rs  mod.rs
src/sql/: connection.rs  database.rs  mod.rs  parser.rs  records.rs  tables.rs
test/: compose.yml
