[package]
name = "dbv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
crossterm = "0.27.0"
lo = "0.0.1"
log = "0.4.21"
log4rs = "1.3.0"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
