[package]
name = "dbv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
log = "0.4.21"
log4rs = "1.3.0"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "postgres", "sqlite"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.10"
